# disticos

./: .travis.yml  Readme.org  default.nix  functions.nix  heartbeat.sh  index.html  netlify.sh  nixpkgs.nix  obj.sh  release.nix
dhall-kubernetes/: apresentação.md  default.nix  reveal_style.css
frp/: default.nix
netlify/: Cargo.toml  default.nix  shell.nix
netlify/fns/: go.mod  package.json  teste.go  teste.js
netlify/src/: main.rs
polysemy-vdp/: default.nix
prolog-coquetel/: default.nix
prolog-coquetel/src/: reveal_style.css
static/dhall-kubernetes/: apresentação.html
static/frp/: apresentação.html
static/polysemy-vdp/: apresentação.html
static/prolog-coquetel/: apresentação.html
